bynkc/tests/fixtures/negative/262_ws_held_map_update/src/s.bynk
context s

type RoomId = opaque String
type UserId = opaque String
type ServerFrame = { text: String }

-- A held `Map[K, Connection]` admits `put`/`get`/`remove`, but not `update` — a
-- held resource cannot be rebuilt from a prior value. `bynk.held.unsupported_map_op`.
agent Room {
  key id: RoomId
  store conns: Map[UserId, Connection[ServerFrame]]

  on call touch(u: UserId) -> Effect[()] {
    let _ <- conns.update(u, (c: Connection[ServerFrame]) => c)
    ()
  }
}
